# ProjectEngine-Cpp

./: CMakeLists.txt
src/: main.cpp
src/system/: system.hpp
src/system/console/: Console.cpp  Console.h
src/system/event/: Event.cpp  Event.h
src/system/window/: Window.cpp  Window.h
src/utils/: constants.hpp  types.hpp  utils.hpp
